package com.dms.document.enums;

public enum SharingType {
    PRIVATE,
    PUBLIC,
    SPECIFIC
}