package com.dms.processor.enums;

public enum DocumentReportStatus {
    PENDING,
    REJECTED,
    RESOLVED,
    REMEDIATED,
}
